; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_xhci-tegra.c_tegra_xusb_runtime_suspend.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_xhci-tegra.c_tegra_xusb_runtime_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.tegra_xusb = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @tegra_xusb_runtime_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tegra_xusb_runtime_suspend(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.tegra_xusb*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.tegra_xusb* @dev_get_drvdata(%struct.device* %4)
  store %struct.tegra_xusb* %5, %struct.tegra_xusb** %3, align 8
  %6 = load %struct.tegra_xusb*, %struct.tegra_xusb** %3, align 8
  %7 = call i32 @tegra_xusb_phy_disable(%struct.tegra_xusb* %6)
  %8 = load %struct.tegra_xusb*, %struct.tegra_xusb** %3, align 8
  %9 = getelementptr inbounds %struct.tegra_xusb, %struct.tegra_xusb* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.tegra_xusb*, %struct.tegra_xusb** %3, align 8
  %14 = getelementptr inbounds %struct.tegra_xusb, %struct.tegra_xusb* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @regulator_bulk_disable(i32 %12, i32 %15)
  %17 = load %struct.tegra_xusb*, %struct.tegra_xusb** %3, align 8
  %18 = call i32 @tegra_xusb_clk_disable(%struct.tegra_xusb* %17)
  ret i32 0
}

declare dso_local %struct.tegra_xusb* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @tegra_xusb_phy_disable(%struct.tegra_xusb*) #1

declare dso_local i32 @regulator_bulk_disable(i32, i32) #1

declare dso_local i32 @tegra_xusb_clk_disable(%struct.tegra_xusb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
